[package]
name = "bevy1-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
bevy_ecs_tilemap = { version = "0.9.0" }
bevy_tweening = "0.6.0"
# bevy_loading = "0.1.2"
bevy_rapier2d = { version = "0.19.0", features = [ "simd-nightly" ]  }
# bevy_pixel_camera = "0.3.0"
# iyes_loading
benimator = "4.1.0"
big-brain = "0.15.0"
bitflags = "1.3.2"
iyes_loopless = "0.9.1"
ndarray = "0.15.6"
num-derive = "0.3.3"
enum-iterator = "1.2.0"
extent = "0.3.0"
interpolation = "0.2.0"
itertools = "0.10.5"
lindel = "0.1.1"
noise = "0.8.2"
num-traits = "0.2.15"
petgraph = "0.6.2"
rand = "0.8.5"
rand_pcg = "0.3.1"
rstar = "0.9.3"

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1
